--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
   "name": "wowapp",
+  "main": "server/index.js",
+  "proxy": "http://localhost:3005",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "cors": "^2.8.4",
+    "dotenv": "^6.0.0",
+    "express": "^4.16.3",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5"
   },
   "scripts": {
